progression_reports/implement_errors_01.txt
🌮  ~/Documents/PlatformIO/Projects/STAC3/pioarduino % pio run -e atom-matrix                                                              
Processing atom-matrix (platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.32/platform-espressif32.zip; board: m5stack-atom; framework: arduino)
-------------------------------------------------------------------------------------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/m5stack-atom.html
PLATFORM: Espressif 32 (55.3.32) > M5Stack-ATOM
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-arduinoespressif32 @ 3.3.2 
 - framework-arduinoespressif32-libs @ 5.5.0+sha.07e9bf4970 
 - tool-esptoolpy @ 5.1.0 
 - tool-mklittlefs @ 3.2.0 
 - toolchain-xtensa-esp-elf @ 14.2.0+20250730
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 45 compatible libraries
Scanning dependencies...
Dependency Graph
|-- LiteLED @ 3.0.0+sha.0b6d02f
|-- XP_Button @ 1.0.3+sha.a2672bb
|-- I2C MPU6886 IMU @ 1.0.0+sha.2a3579c
Building in release mode
Compiling .pio/build/atom-matrix/lib9c5/LiteLED/LiteLED.cpp.o
Compiling .pio/build/atom-matrix/lib9c5/LiteLED/ll_encoder.cpp.o
Compiling .pio/build/atom-matrix/lib9c5/LiteLED/ll_priority.cpp.o
Compiling .pio/build/atom-matrix/lib9c5/LiteLED/ll_registry.cpp.o
Compiling .pio/build/atom-matrix/lib9c5/LiteLED/ll_strip_core.cpp.o
Compiling .pio/build/atom-matrix/lib9c5/LiteLED/ll_strip_pixels.cpp.o
Compiling .pio/build/atom-matrix/libc3f/XP_Button/XP_Button.cpp.o
Compiling .pio/build/atom-matrix/lib2fa/Wire/Wire.cpp.o
In file included from .pio/libdeps/atom-matrix/LiteLED/src/LiteLED.cpp:8:
.pio/libdeps/atom-matrix/LiteLED/src/LiteLED.h:35:6: warning: #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled." [-Wcpp]
   35 |     #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled."
      |      ^~~~~~~
In file included from .pio/libdeps/atom-matrix/LiteLED/src/ll_encoder.h:13,
                 from .pio/libdeps/atom-matrix/LiteLED/src/ll_encoder.cpp:6:
.pio/libdeps/atom-matrix/LiteLED/src/LiteLED.h:35:6: warning: #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled." [-Wcpp]
   35 |     #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled."
      |      ^~~~~~~
Compiling .pio/build/atom-matrix/libc60/I2C MPU6886 IMU/I2C_MPU6886.cpp.o
In file included from .pio/libdeps/atom-matrix/LiteLED/src/ll_registry.h:14,
                 from .pio/libdeps/atom-matrix/LiteLED/src/ll_registry.cpp:11:
.pio/libdeps/atom-matrix/LiteLED/src/LiteLED.h:35:6: warning: #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled." [-Wcpp]
   35 |     #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled."
      |      ^~~~~~~
In file included from .pio/libdeps/atom-matrix/LiteLED/src/ll_strip_core.h:16,
                 from .pio/libdeps/atom-matrix/LiteLED/src/ll_strip_core.cpp:6:
.pio/libdeps/atom-matrix/LiteLED/src/LiteLED.h:35:6: warning: #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled." [-Wcpp]
   35 |     #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled."
      |      ^~~~~~~
In file included from .pio/libdeps/atom-matrix/LiteLED/src/ll_strip_pixels.h:17,
                 from .pio/libdeps/atom-matrix/LiteLED/src/ll_strip_pixels.cpp:6:
.pio/libdeps/atom-matrix/LiteLED/src/LiteLED.h:35:6: warning: #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled." [-Wcpp]
   35 |     #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled."
      |      ^~~~~~~
Compiling .pio/build/atom-matrix/src/Hardware/Display/Matrix5x5/Display5x5.cpp.o
Compiling .pio/build/atom-matrix/src/Hardware/Display/Matrix8x8/Display8x8.cpp.o
Compiling .pio/build/atom-matrix/src/main.cpp.o
Building .pio/build/atom-matrix/bootloader.bin
Generating partitions .pio/build/atom-matrix/partitions.bin
src/Hardware/Display/Matrix5x5/Display5x5.cpp:1:10: fatal error: Display5x5.h: No such file or directory

********************************************************************
* Looking for Display5x5.h dependency? Check our library registry!
*
* CLI  > platformio lib search "header:Display5x5.h"
* Web  > https://registry.platformio.org/search?q=header:Display5x5.h
*
********************************************************************

    1 | #include "Display5x5.h"
      |          ^~~~~~~~~~~~~~
compilation terminated.
Compiling .pio/build/atom-matrix/FrameworkArduino/ColorFormat.c.o
*** [.pio/build/atom-matrix/src/Hardware/Display/Matrix5x5/Display5x5.cpp.o] Error 1
In file included from include/Hardware/Display/Matrix8x8/../IDisplay.h:5,
                 from include/Hardware/Display/Matrix8x8/Display8x8.h:4,
                 from src/Hardware/Display/Matrix8x8/Display8x8.cpp:2:
include/Hardware/Display/Matrix8x8/../Colors.h:67:2: error: #error "No color order defined! Check Device_Config.h"
   67 | #error "No color order defined! Check Device_Config.h"
      |  ^~~~~
esptool v5.1.0
Creating ESP32 image...
Merged 2 ELF sections.
Successfully created ESP32 image.
In file included from include/Hardware/Display/Matrix8x8/Display8x8.h:5:
.pio/libdeps/atom-matrix/LiteLED/src/LiteLED.h:35:6: warning: #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled." [-Wcpp]
   35 |     #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled."
      |      ^~~~~~~
include/Hardware/Display/Matrix8x8/../Colors.h: In function 'STAC::Display::rgb_t STAC::Display::boardColor(uint8_t, uint8_t, uint8_t)':
include/Hardware/Display/Matrix8x8/../Colors.h:69:9: error: no return statement in function returning non-void [-Werror=return-type]
   69 |         }
      |         ^
In file included from include/Hardware/Display/Matrix5x5/Display5x5.h:5,
                 from include/Hardware/Display/DisplayFactory.h:11,
                 from src/main.cpp:5:
.pio/libdeps/atom-matrix/LiteLED/src/LiteLED.h:35:6: warning: #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled." [-Wcpp]
   35 |     #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled."
      |      ^~~~~~~
src/Hardware/Display/Matrix8x8/Display8x8.cpp: In constructor 'STAC::Display::Display8x8::Display8x8(uint8_t, uint8_t, uint8_t)':
src/Hardware/Display/Matrix8x8/Display8x8.cpp:9:24: error: invalid conversion from 'uint8_t' {aka 'unsigned char'} to 'led_strip_type_t' [-fpermissive]
    9 |             : display( ledType, 0 ) // Create LiteLED object (channel 0)
      |                        ^~~~~~~
      |                        |
      |                        uint8_t {aka unsigned char}
.pio/libdeps/atom-matrix/LiteLED/src/LiteLED.h:152:31: note:   initializing argument 1 of 'LiteLED::LiteLED(led_strip_type_t, bool)'
  152 |     LiteLED( led_strip_type_t led_type, bool rgbw );
      |              ~~~~~~~~~~~~~~~~~^~~~~~~~
cc1plus: some warnings being treated as errors
*** [.pio/build/atom-matrix/src/Hardware/Display/Matrix8x8/Display8x8.cpp.o] Error 1
================================================================ [FAILED] Took 7.06 seconds ================================================================

Environment    Status    Duration
-------------  --------  ------------
atom-matrix    FAILED    00:00:07.058
=========================================================== 1 failed, 0 succeeded in 00:00:07.058 ===========================================================
